--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "gh-pages": "^3.1.0",
     "json-server": "^0.16.3",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.0",
+    "sass": "^1.66.1",
+    "sass-loader": "^10.4.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
